--- a/pypro/base/templates/base/index.html
+++ b/pypro/base/templates/base/index.html
@@ -49,15 +49,72 @@
           <div class="container">
             <div class="jumbotron">
               <h2>Curso de Python com Luciano Ramalho</h2>
-              <p>
-                Confira em breve mais informações sobre o curso que será
-                ministrado pelo autor do livro
-                <a
-                  href="http://shop.oreilly.com/product/0636920032519.do"
-                  target="_blank"
-                  >Python Fluente</a
-                >
-              </p>
+              <h4 class="mt-4">Entre na fila de espera</h3>
+
+              <!-- Begin Mailchimp Signup Form -->
+              <form
+                action="https://twitter.us20.list-manage.com/subscribe/post?u=c0edf47eba1a3cd1a150c596e&amp;id=a5082ec336"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate
+              >
+                <div id="mc_embed_signup_scroll">
+                  <div class="form-row align-items-center">
+                    <div class="col-auto">
+                      <label class="sr-only" for="mce-EMAIL">E-mail</label>
+                      <div class="input-group mb-2">
+                        <input
+                          type="email"
+                          value=""
+                          name="EMAIL"
+                          class="required email form-control"
+                          id="mce-EMAIL"
+                          placeholder="examplo@domain.com.br"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="col-auto">
+                      <label class="sr-only" for="mce-FNAME">Nome</label>
+                      <input
+                        type="text"
+                        value=""
+                        name="FNAME"
+                        class="form-control mb-2"
+                        id="mce-FNAME"
+                        placeholder="Seu nome"
+                      />
+                    </div>
+
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div
+                      style="position: absolute; left: -5000px"
+                      aria-hidden="true"
+                    >
+                      <input
+                        type="text"
+                        name="b_c0edf47eba1a3cd1a150c596e_a5082ec336"
+                        tabindex="-1"
+                        value=""
+                      />
+                    </div>
+                  
+                    <div class="col-auto">
+                      <input
+                        type="submit"
+                        value="Salvar"
+                        name="subscribe"
+                        id="mc-embedded-subscribe"
+                        class="btn btn-primary mb-2"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </form>
+              <!--End mc_embed_signup-->
             </div>
             <div class="row">
               <div class="col-md-12">
@@ -71,17 +128,25 @@
                         class="img-thumbnail float-left mr-3"
                       />
                       Ramalho é sócio e professor na
-                      <a href="www.python.pro.br">Python Pro</a> e autor do
-                      Livro Python Fluente. Foi diretor técnico do Brasil
-                      Online, primeiro portal da Abril S/A na Web. Liderou times
-                      para os portais IDG Now, BOL, UOL, AOL Brasil e outros,
-                      usando Python desde 1998. Como instrutor, atendeu clientes
-                      como Citibank, CPqD, Serpro, Presidência da República,
-                      Globo.com e Itaú. Palestrante em eventos internacionais
-                      como FISL, PyCon US e OSCON. Ajudou a criar a Associação
-                      Python Brasil e foi seu presidente. É membro da Python
-                      Software Foundation e fundador do Garoa Hacker Clube, o
-                      primeiro hackerspace do Brasil.
+                      <a href="https://www.python.pro.br" target="_blank">
+                        Python Pro
+                      </a>
+                      e autor do Livro
+                      <a
+                        href="http://shop.oreilly.com/product/0636920032519.do"
+                        target="_blank"
+                      >
+                        Python Fluente </a
+                      >. Foi diretor técnico do Brasil Online, primeiro portal
+                      da Abril S/A na Web. Liderou times para os portais IDG
+                      Now, BOL, UOL, AOL Brasil e outros, usando Python desde
+                      1998. Como instrutor, atendeu clientes como Citibank,
+                      CPqD, Serpro, Presidência da República, Globo.com e Itaú.
+                      Palestrante em eventos internacionais como FISL, PyCon US
+                      e OSCON. Ajudou a criar a Associação Python Brasil e foi
+                      seu presidente. É membro da Python Software Foundation e
+                      fundador do Garoa Hacker Clube, o primeiro hackerspace do
+                      Brasil.
                     </p>
                   </div>
                 </div>
