--- a/pypro/base/templates/base/index.html
+++ b/pypro/base/templates/base/index.html
@@ -1,86 +1,48 @@
+{% extends 'base/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Python Pro</title>
+{% block title %}Python Pro - Home{% endblock title %}
+{% block description %}Página do curso Python Pro{% endblock description %}
 
-    <meta
-      name="description"
-      content="Source code generated using layoutit.com"
-    />
-    <meta name="author" content="LayoutIt!" />
-
-    <link rel="icon" type="img/png" href="{% static 'img/favicon.png' %}" />
-
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
-  </head>
-
-  <body>
-    <div class="container-fluid">
-      <div class="row">
+{% block body %}
+<div class="container-fluid">
+    <div class="row">
         <div class="col-md-12">
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto"></ul>
-            </div>
-          </nav>
-          <div class="container">
-            <div class="jumbotron">
-              <h2>Curso de Python com Luciano Ramalho</h2>
-              <h4 class="mt-4">Matriculas abertas! Curso R$ 1000,00 (mil reais)</h3>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto"></ul>
+                </div>
+            </nav>
+            <div class="container">
+                <div class="jumbotron">
+                    <h2>Curso de Python com Luciano Ramalho</h2>
+                    <h4 class="mt-4">Matriculas abertas! Curso R$ 1000,00 (mil reais)</h3>
 
-              <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
-              <form
-                action="https://pagseguro.uol.com.br/checkout/v2/payment.html"
-                method="post"
-                onsubmit="PagSeguroLightbox(this); return false;"
-              >
-                <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-                <input
-                  type="hidden"
-                  name="code"
-                  value="1CD80C0BFDFD299884591FBDB9D5E671"
-                />
-                <input type="hidden" name="iot" value="button" />
-                <input
-                  type="image"
-                  src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/120x53-comprar-azul.gif"
-                  name="submit"
-                  alt="Pague com PagSeguro - é rápido, grátis e seguro!"
-                />
-              </form>
-              <script
-                type="text/javascript"
-                src="https://stc.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.lightbox.js"
-              ></script>
-              <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
+                        <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
+                        <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post"
+                            onsubmit="PagSeguroLightbox(this); return false;">
+                            <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
+                            <input type="hidden" name="code" value="1CD80C0BFDFD299884591FBDB9D5E671" />
+                            <input type="hidden" name="iot" value="button" />
+                            <input type="image"
+                                src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/120x53-comprar-azul.gif"
+                                name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                        </form>
+                        <script type="text/javascript"
+                            src="https://stc.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.lightbox.js"></script>
+                        <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
 
-              <!-- <h4 class="mt-4">Entre na fila de espera</h3> -->
+                        <!-- <h4 class="mt-4">Entre na fila de espera</h3> -->
 
-              <!-- Begin Mailchimp Signup Form -->
-              <!-- 
+                        <!-- Begin Mailchimp Signup Form -->
+                        <!-- 
               <form
                 action="https://twitter.us20.list-manage.com/subscribe/post?u=c0edf47eba1a3cd1a150c596e&amp;id=a5082ec336"
                 method="post"
@@ -105,7 +67,6 @@
                         />
                       </div>
                     </div>
-
                     <div class="col-auto">
                       <label class="sr-only" for="mce-FNAME">Nome</label>
                       <input
@@ -118,8 +79,8 @@
                       />
                     </div>
                     -->
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <!--
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <!--
                     <div
                       style="position: absolute; left: -5000px"
                       aria-hidden="true"
@@ -145,74 +106,39 @@
                 </div>
               </form>
               -->
-              <!--End mc_embed_signup-->
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="card">
-                  <h5 class="card-header">Mais detalhes sobre o instrutor</h5>
-                  <div class="card-body">
-                    <p class="card-text">
-                      <img
-                        src="{% static 'img/luciano-ramalho.png'%}"
-                        alt="Foto de Luciano Ramalho"
-                        class="img-thumbnail float-left mr-3"
-                      />
-                      Ramalho é sócio e professor na
-                      <a href="https://www.python.pro.br" target="_blank">
-                        Python Pro
-                      </a>
-                      e autor do Livro
-                      <a
-                        href="http://shop.oreilly.com/product/0636920032519.do"
-                        target="_blank"
-                      >
-                        Python Fluente </a
-                      >. Foi diretor técnico do Brasil Online, primeiro portal
-                      da Abril S/A na Web. Liderou times para os portais IDG
-                      Now, BOL, UOL, AOL Brasil e outros, usando Python desde
-                      1998. Como instrutor, atendeu clientes como Citibank,
-                      CPqD, Serpro, Presidência da República, Globo.com e Itaú.
-                      Palestrante em eventos internacionais como FISL, PyCon US
-                      e OSCON. Ajudou a criar a Associação Python Brasil e foi
-                      seu presidente. É membro da Python Software Foundation e
-                      fundador do Garoa Hacker Clube, o primeiro hackerspace do
-                      Brasil.
-                    </p>
-                  </div>
+                        <!--End mc_embed_signup-->
                 </div>
-              </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <h5 class="card-header">Mais detalhes sobre o instrutor</h5>
+                            <div class="card-body">
+                                <p class="card-text">
+                                    <img src="{% static 'img/luciano-ramalho.png'%}" alt="Foto de Luciano Ramalho"
+                                        class="img-thumbnail float-left mr-3" />
+                                    Ramalho é sócio e professor na
+                                    <a href="https://www.python.pro.br" target="_blank">
+                                        Python Pro
+                                    </a>
+                                    e autor do Livro
+                                    <a href="http://shop.oreilly.com/product/0636920032519.do" target="_blank">
+                                        Python Fluente </a>. Foi diretor técnico do Brasil Online, primeiro portal
+                                    da Abril S/A na Web. Liderou times para os portais IDG
+                                    Now, BOL, UOL, AOL Brasil e outros, usando Python desde
+                                    1998. Como instrutor, atendeu clientes como Citibank,
+                                    CPqD, Serpro, Presidência da República, Globo.com e Itaú.
+                                    Palestrante em eventos internacionais como FISL, PyCon US
+                                    e OSCON. Ajudou a criar a Associação Python Brasil e foi
+                                    seu presidente. É membro da Python Software Foundation e
+                                    fundador do Garoa Hacker Clube, o primeiro hackerspace do
+                                    Brasil.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-
-    <footer class="main-footer mt-5 pt-4 text-light">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>Entre em contato</h3>
-            <address>
-              +55 12 997-411-854
-              <br />
-              <a href="mailto:ramalho@python.pro.br" class="text-light"
-                >ramalho@python.pro.br</a
-              >
-            </address>
-          </div>
-        </div>
-      </div>
-
-      <div class="rights pb-4">
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              {% now "Y"%} Python Pro. Todos os direitos reservados.
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </body>
-</html>
+</div>
+{% endblock body %}
