--- a/pypro/base/templates/base/base.html
+++ b/pypro/base/templates/base/base.html
@@ -25,7 +25,25 @@
   </head>
 
   <body>
-    {% block body %}{% endblock body %}
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse"
+                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto"></ul>
+              </div>
+          </nav>
+          {% block body %}{% endblock body %}
+        </div>
+      </div>
+    </div>
 
     <footer class="main-footer mt-5 pt-4 text-light">
       <div class="container">
