--- a/pypro/base/templates/base/base.html
+++ b/pypro/base/templates/base/base.html
@@ -1,50 +1,61 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>{% block title %}Python Pro{% endblock title %}</title>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta
-      name="description"
-      content="{% block description %}{% endblock description %}"
-    />
-    <meta name="author" content="Gabriel Alves" />
+  <title>{% block title %}Python Pro{% endblock title %}</title>
 
-    <link rel="icon" type="img/png" href="{% static 'img/favicon.png' %}" />
+  <meta name="description" content="{% block description %}{% endblock description %}" />
+  <meta name="author" content="Gabriel Alves" />
 
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  <link rel="icon" type="img/png" href="{% static 'img/favicon.png' %}" />
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
-  </head>
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 
-  <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse"
-                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                  aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
+  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/scripts.js' %}"></script>
+</head>
 
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto"></ul>
-              </div>
-          </nav>
-          {% block body %}{% endblock body %}
-        </div>
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Modulos
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  {% for modulo in MODULOS %}
+                    <a class="dropdown-item" href="#">{{ modulo.titulo }}</a>
+                    <div class="dropdown-divider"></div>
+                  {% endfor %}
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        {% block body %}{% endblock body %}
       </div>
     </div>
+  </div>
 
-    {% include 'base/footer.html' with contato_email="ramalho@python.pro.br" only %}
-  </body>
+  {% include 'base/footer.html' with contato_email="ramalho@python.pro.br" only %}
+</body>
+
 </html>
