--- a/pypro/base/templates/base/base.html
+++ b/pypro/base/templates/base/base.html
@@ -23,37 +23,32 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Modulos
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  {% for modulo in MODULOS %}
-                    <a class="dropdown-item" href="{{ modulo.get_absolute_url }}">{{ modulo.titulo }}</a>
-                    <div class="dropdown-divider"></div>
-                  {% endfor %}
-                </div>
-              </li>
-            </ul>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Modulos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            {% for modulo in MODULOS %}
+              <a class="dropdown-item" href="{{ modulo.get_absolute_url }}">{{ modulo.titulo }}</a>
+              <div class="dropdown-divider"></div>
+            {% endfor %}
           </div>
-        </nav>
-        {% block body %}{% endblock body %}
-      </div>
+        </li>
+      </ul>
+      <a class="btn btn-light my-2" href="{% url 'login' %}">Entrar</a>
     </div>
-  </div>
+  </nav>
+  {% block body %}{% endblock body %}
 
   {% include 'base/footer.html' with contato_email="ramalho@python.pro.br" only %}
 </body>
