--- a/pypro/base/templates/base/base.html
+++ b/pypro/base/templates/base/base.html
@@ -45,7 +45,10 @@
           </div>
         </li>
       </ul>
-      <a class="btn btn-light my-2" href="{% url 'login' %}">Entrar</a>
+      {% if user.is_authenticated %}
+      {% else %}
+        <a class="btn btn-light my-2" href="{% url 'login' %}">Entrar</a>
+      {% endif %}
     </div>
   </nav>
   {% block body %}{% endblock body %}
